--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,111 @@
-.App {
-  text-align: center;
+
+body{
+  background-color:#1f1e1e;
+  color:#fff;
+  overflow:hidden;
+}
+h1{
+  text-align:center;
+}
+.todo-wrapper{
+background: #353434;
+padding:2%;
+width:fit-content;
+margin-left: auto;
+margin-right: auto;
+margin-top:3%;
+max-height:80vh;
+overflow-y:auto;
+box-shadow:0px 5px 7px rgb(27,27,27);
+
+}
+.todo-input{
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  border-bottom: 1px solid rgb(78,78,78);
+  padding-bottom: 25px;
+  margin-bottom:25px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
+.todo-input-item{
+  display:flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: flex-start;
+  margin-right: 25px;;
+}
+.todo-input-item label{
+  font-weight: bold;
+  margin-bottom:10px;  
+}
+.todo-input-item input{
+  padding:8px;
+  border:none;
+  width:250px;
+
 }
 
-.App-link {
-  color: #61dafb;
+.todo-input-item input:focus{
+  outline: 2px solid rgb(0, 230, 122);    
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.primaryBtn{
+  background-color: rgb(0, 230, 122);
+  color:white;
+  border:none;
+  border-radius: 0px;
+  margin-top:25px;
+  padding:10px;
+  width:60px;
+  cursor:pointer;
 }
+.primaryBtn:hover{
+  background-color: rgb(0, 196, 106);  
+}
+.secondaryBtn{
+  background-color: rgb(71, 71, 71);
+  color:#fff;
+  border:none;
+  border-radius:0px;  
+  margin-top:25px;
+  padding:10px;
+  width:fit-content;
+  cursor:pointer;
+  
+}
+.secondaryBtn:hover{
+  background-color: rgb(0, 196, 106);  
+}
+.active{
+  background-color: rgb(0, 230, 122);  
+}
+.todo-list{
+  display:flex;
+  flex-direction: column;
+}
+.btn-area{
+  margin-bottom:15px;
+}
+.todo-list-item{
+  background-color: #414040;
+  display: flex;
+  justify-content: space-between;
+  padding:25px;
+  padding-bottom:10px;
+  padding-top:10px;
+  margin-bottom:10px;
+}
+
+.todo-list-item h3{
+ font-size: 25px;
+ color:rgb(0, 230, 122);
+ font-weight: bold;
+ margin:0;
+
+}
+.todo-list-item p{
+  font-size: 14px;
+  color:rgb(161, 161, 161);  
+  margin-top:0;
+ 
+ }
