--- a/src/App.css
+++ b/src/App.css
@@ -94,6 +94,7 @@ box-shadow:0px 5px 7px rgb(27,27,27);
   padding-bottom:10px;
   padding-top:10px;
   margin-bottom:10px;
+  box-shadow: 0px 3px 5px rgb(43,42,42);
 }
 
 .todo-list-item h3{
@@ -108,4 +109,21 @@ box-shadow:0px 5px 7px rgb(27,27,27);
   color:rgb(161, 161, 161);  
   margin-top:0;
  
+ }
+ .icon{
+  font-size:35px;
+  cursor:pointer;
+ }
+ .check-icon{
+  font-size:25px;
+  margin-left:10px;
+  color:rgb(0, 230, 122);
+  cursor:pointer;
+ }
+
+ .check-icon:hover{  
+  color:rgb(4, 196, 106)
+ }
+ .icon-area{
+  padding-top:2%;
  }
